--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 	<!-- Document Title
 	============================================= -->
-	<!--TODO Insert the title from gather content-->
+	<!--TODO Insert the title, description, and keywords from gather content-->
 	<title></title>
 	<link rel="stylesheet" href="css/custom.css" type="text/css"/>
 
@@ -143,14 +143,23 @@
         ============================================= -->
 				<nav id="primary-menu">
 
+					<!--<ul class="font-light one-page-menu" data-easing="easeInOutExpo" data-speed="1500">-->
+						<!--<li><a href="#" data-href="#section-reviews" class="font-green smoothScroll"><div class="center weight-normal font-orange">New Patient Offers!</div></a></li>-->
+						<!--<li><a href="#" data-href="#no-insurance-link-to" data-offset="60"><div class="center font-light-blue">No Insurance?</div></a></li>-->
+						<!--<li><a href="#" data-href="#section-reviews-2"><div class="center font-green smoothScroll">Reviews</div></a></li>-->
+						<!--<li><a href="#" data-href="#meet-the-team-link-to"><div class="center">Meet the Team</div></a></li>-->
+						<!--<li><a href="#" data-href="#services-link-to"><div class="center">Services</div></a></li>-->
+						<!--<li><a href="#" data-href="#office-tour-link-to"><div class="center">Office Tour</div></a></li>-->
+						<!--<li><a href="#" data-href="#location-link-to"><div class="center">Location</div></a></li>-->
+					<!--</ul>-->
 					<ul class="font-light one-page-menu" data-easing="easeInOutExpo" data-speed="1500">
-						<li><a href="#" data-href="#new-patient-offers-link-to" class="font-green smoothScroll"><div class="center weight-normal font-orange">New Patient Offers!</div></a></li>
-						<li><a href="#no-insurance-link-to" data-href="#section-services" data-offset="60"><div class="center font-light-blue">No Insurance?</div></a></li>
-						<li><a href="#section-reviews-2" data-href="#section-reviews"><div class="center font-green smoothScroll">Reviews</div></a></li>
-						<li><a href="#meet-the-team-link-to" data-href="#content"><div class="center">Meet the Team</div></a></li>
-						<li><a href="#services-link-to" data-href="#section-pricing"><div class="center">Services</div></a></li>
-						<li><a href="#office-tour-link-to" data-href="#section-smile-gallery"><div class="center">Office Tour</div></a></li>
-						<li><a href="#location-link-to" data-href="#section-location"><div class="center">Location</div></a></li>
+						<li><a href="#section-work" data-href="#section-work" class="smoothScroll font-green"><div class="font-green weight-normal">New Patient Offers!</div></a></li>
+						<li><a href="#" data-href="#section-services" data-offset="60"><div>No Insurance?</div></a></li>
+						<li><a href="#" data-href="#section-reviews"><div>Reviews</div></a></li>
+						<li><a href="#" data-href="#section-about"><div>Meet the Team</div></a></li>
+						<li><a href="#" data-href="#section-pricing"><div>Services</div></a></li>
+						<li><a href="#" data-href="#section-smile-gallery"><div>Gallery</div></a></li>
+						<li><a href="#" data-href="#section-location"><div>Location</div></a></li>
 					</ul>
 
 					<!-- Top Search
@@ -721,13 +730,13 @@
 								</div>
 							</div>
 						</div>
+						</div>
 
 
 
 					</div>
 				</div>
 
-			</section>
 
 		</div>
 
@@ -756,47 +765,55 @@
   ============================================= -->
 <div id="myModal" class="modal fade" role="dialog">
 	<div class="modal-dialog">
-
-		<!-- Modal content-->
-		<form id="mail-form" action="//web-api.tysonsteele.com/v1/webprops/KEY/notify">
-			<h5>YES! Please contact me to schedule an appointment or answer any questions I might still have:</h5>
-			<div class="row appointment_input_row form-group">
-				<div class="col-xs-4">
-					<label for="name">My name:</label>
-				</div>
-				<div class="col-xs-8">
-					<input type="text" required name="name" id="name" class="form-control appointment_form"/>
+		<div class="modal-body">
+			<div class="modal-content">
+				<div class="modal-body">
+					<!-- Modal content-->
+					<form id="mail-form" action="//web-api.tysonsteele.com/v1/webprops/KEY/notify">
+						<h5>YES! Please contact me to schedule an appointment or answer any questions I might still have:</h5>
+						<div class="row appointment_input_row form-group">
+							<div class="col-xs-4">
+								<label for="name">My name:</label>
+							</div>
+							<div class="col-xs-8">
+								<input type="text" required name="name" id="name" class="form-control appointment_form"/>
+							</div>
+						</div>
+						<div class="row appointment_input_row form-group">
+							<div class="col-xs-4">
+								<label for="name">Email:</label>
+							</div>
+							<div class="col-xs-8">
+								<input type="email" required name="email" id="email" class="form-control appointment_form"/>
+							</div>
+						</div>
+						<div class="row appointment_input_row form-group">
+							<div class="col-xs-4">
+								<label for="name">Phone #:</label>
+							</div>
+							<div class="col-xs-8">
+								<input type="text" required name="phone" id="phone" class="form-control appointment_form"/>
+							</div>
+						</div>
+						<button type="submit" class="roll-over btn btn-danger btn-block btn-lg">Request Appointment</button>
+					</form>
 				</div>
 			</div>
-			<div class="row appointment_input_row form-group">
-				<div class="col-xs-4">
-					<label for="name">Email:</label>
-				</div>
-				<div class="col-xs-8">
-					<input type="email" required name="email" id="email" class="form-control appointment_form"/>
-				</div>
-			</div>
-			<div class="row appointment_input_row form-group">
-				<div class="col-xs-4">
-					<label for="name">Phone #:</label>
-				</div>
-				<div class="col-xs-8">
-					<input type="text" required name="phone" id="phone" class="form-control appointment_form"/>
-				</div>
-			</div>
-			<button type="submit" class="roll-over btn btn-danger btn-block btn-lg">Request Appointment</button>
-		</form>
-
+		</div>
 	</div>
 </div>
 
 <!-- External JavaScripts
 ============================================= -->
 
-<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="js/jquery.min.js"><\/script>')</script>
 
 <script type="text/javascript" src="js/plugins.js"></script>
+
+<script type="text/javascript" src="js/functions.js"></script>
+
+<script type="text/javascript" src="js/custom.js"></script>
 
 <script src="//cdn.jsdelivr.net/jquery.slick/1.6.0/slick.min.js"></script>
 <script>window.slick || document.write('<script src="js/slick.js"><\/script>')</script>
@@ -835,9 +852,6 @@
 
 <script type="text/javascript" src="http://birdeye.com/embed/v4/147025711192168/3/1693194550"></script>
 
-<script type="text/javascript" src="js/functions.js"></script>
-
-<script type="text/javascript" src="js/custom.js"></script>
 
 </body>
 </html>
